--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,6 @@
 version: 2
 updates:
-    - package-ecosystem: "java"
+    - package-ecosystem: "maven"
       schedule:
           interval: "weekly"
     - package-ecosystem: "github-actions"
