--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,6 @@ jobs:
             -   name: Run semantic-release
                 env:
                     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                    MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
-                    MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
+                    SERVER_USERNAME: ${{ secrets.MAVEN_USERNAME }}
+                    SERVER_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
                 run: npx semantic-release
