--- a/pom.xml
+++ b/pom.xml
@@ -4,4 +4,24 @@
     <groupId>com.zitadel</groupId>
     <artifactId>zitadel</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.7.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.7.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.zitadel</groupId>
+            <artifactId>zitadel-client</artifactId>
+            <version>[0.0.1,)</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
