--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         </dependency>
         <dependency>
             <groupId>com.zitadel</groupId>
-            <artifactId>zitadel-client</artifactId>
+            <artifactId>client</artifactId>
             <version>[0.0.1,)</version>
             <scope>test</scope>
         </dependency>
