Added a meaningful name for the workflow run

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   check-compatibility:
+    name: With Java ${{ matrix.java-version }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
