--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
                             <value>conf/log4j.properties</value>
                         </property>
                     </systemPropertyVariables>
-                    <argLine>-Xms512m -Xmx1500m</argLine>
+                    <argLine>${jacoco.agent} -Xms512m -Xmx1500m</argLine>
                     <parallel>methods</parallel>
                     <threadCount>10</threadCount>
                 </configuration>
@@ -190,6 +190,54 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.11</version>
+                <executions>
+                    <execution>
+                        <id>prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report-html</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                        <configuration>
+                            <formats>
+                                <format>HTML</format>
+                            </formats>
+                            <outputDirectory>${project.build.directory}/coverage/html</outputDirectory>
+                            <excludes>
+                                <exclude>**/api/**</exclude>
+                                <exclude>**/model/**</exclude>
+                            </excludes>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>report-xml</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                        <configuration>
+                            <formats>
+                                <format>XML</format>
+                            </formats>
+                            <outputDirectory>${project.build.directory}/coverage</outputDirectory>
+                            <excludes>
+                                <exclude>**/api/**</exclude>
+                                <exclude>**/model/**</exclude>
+                            </excludes>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
         </plugins>
     </build>
     <profiles>
@@ -290,15 +338,16 @@
             <version>1.20.6</version>
             <scope>test</scope>
         </dependency>
-		<dependency>
-			<groupId>io.github.classgraph</groupId>
-			<artifactId>classgraph</artifactId>
-			<version>4.8.157</version>
-			<scope>test</scope>
-		</dependency>
+        <dependency>
+            <groupId>io.github.classgraph</groupId>
+            <artifactId>classgraph</artifactId>
+            <version>4.8.157</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jackson-version>2.17.1</jackson-version>
+        <jacoco.agent>${argLine}</jacoco.agent>
     </properties>
 </project>
