Passed the token env vars to the test runner to that integration tests may run

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,3 +29,6 @@ jobs:
 
       - name: Run Junit
         run: mvn test
+        env:
+          BASE_URL: ${{ secrets.BASE_URL }}
+          AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
