--- a/pom.xml
+++ b/pom.xml
@@ -256,9 +256,11 @@
             <id>sign-artifacts</id>
             <build>
                 <plugins>
-                    <plugin>
+                  <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
+                        <!--suppress MavenModelInspection -->
                         <artifactId>maven-gpg-plugin</artifactId>
+                        <!--suppress MavenModelInspection -->
                         <version>3.0.1</version>
                         <executions>
                             <execution>
@@ -372,9 +374,10 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-    <properties>
+  <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jackson-version>2.17.1</jackson-version>
+        <!--suppress XmlUnresolvedReference -->
         <jacoco.agent>${argLine}</jacoco.agent>
     </properties>
 </project>
