--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -13,6 +13,7 @@ jobs:
     strategy:
       matrix:
         java-version: [ '8', '11', '17', '21' ]
+      fail-fast: false
 
     steps:
       - name: Checkout code
