Improved the build to ensure that the null-checks are not run during the compat testing

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -39,4 +39,4 @@ jobs:
 
       - name: Check Installability
         working-directory: project/sanity
-        run: mvn clean test
+        run: mvn clean test -DskipErrorProne=true
