Improved the build to ensure that the null-checks are not run during the compat testing

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Build Library
         working-directory: project/library
-        run: mvn clean install
+        run: mvn clean install -DskipErrorProne=true
 
       - name: Check Installability
         working-directory: project/sanity
