--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
 <!--suppress XmlUnusedNamespaceDeclaration, XmlHighlighting -->
-<manifest package="com.zitadel" xmlns:android="http://schemas.android.com/apk/res/android">
-    <application />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.zitadel">
+  <application/>
 </manifest>
