--- a/.releaserc.json
+++ b/.releaserc.json
@@ -12,6 +12,15 @@
       }
     ],
     [
+      "semantic-release-plugin-update-version-in-files",
+      {
+        "files": [
+          "src/main/java/com/zitadel/Version.java"
+        ],
+        "placeholder": "0.0.0"
+      }
+    ],
+    [
       "@semantic-release/github",
       {
         "assets": [
@@ -27,7 +36,8 @@
       {
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}",
         "assets": [
-          "pom.xml"
+          "pom.xml",
+          "src/main/java/com/zitadel/Version.java"
         ]
       }
     ]
