--- a/pom.xml
+++ b/pom.xml
@@ -269,10 +269,7 @@
                 <arg>-XDcompilePolicy=simple</arg>
                 <arg>--should-stop=ifError=FLOW</arg>
                 <arg>-Xlint:all</arg>
-                <arg>-Xplugin:ErrorProne -XepExcludedPaths:.*/com/zitadel/(api|model)/.*
-                  -Xep:NullAway:ERROR -XepOpt:NullAway:AnnotatedPackages=com.zitadel
-                  -XepOpt:NullAway:UnannotatedSubPackages=com.zitadel.api,com.zitadel.model
-                </arg>
+                <arg>-Xplugin:ErrorProne -XepExcludedPaths:.*/com/zitadel/(api|model)/.* -XepDisableWarningsInGeneratedCode -Xep:NullAway:ERROR -XepOpt:NullAway:AnnotatedPackages=com.zitadel -XepOpt:NullAway:UnannotatedSubPackages=com.zitadel.api,com.zitadel.model</arg>
                 <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
                 <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
                 <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
