--- a/pom.xml
+++ b/pom.xml
@@ -249,6 +249,38 @@
           </includes>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>com.diffplug.spotless</groupId>
+        <artifactId>spotless-maven-plugin</artifactId>
+        <version>2.12.0</version>
+        <configuration>
+          <formats>
+            <format>
+              <includes>
+                <include>**/*.java</include>
+              </includes>
+              <excludes>
+                <exclude>**/api/*.java</exclude>
+                <exclude>**/model/*.java</exclude>
+              </excludes>
+            </format>
+          </formats>
+          <java>
+            <excludes>
+              <exclude>**/api/*.java</exclude>
+              <exclude>**/model/*.java</exclude>
+            </excludes>
+            <googleJavaFormat/>
+          </java>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>apply</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
   <profiles>
