--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -1,10 +1,14 @@
 name: Compatibility
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
+  workflow_call:
+    inputs:
+      library_ref:
+        required: true
+        type: string
+      sanity_ref:
+        required: true
+        type: string
 
 jobs:
   check-compatibility:
@@ -19,12 +23,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
+          ref: ${{ inputs.library_ref }}
           path: project/library
 
       - name: Checkout sanity stub
         uses: actions/checkout@v4
         with:
-          ref: sanity
+          ref: ${{ inputs.sanity_ref }}
           path: project/sanity
 
       - name: Setup Java
@@ -32,28 +37,26 @@ jobs:
         with:
           java-version: ${{ matrix.java-version }}
           distribution: 'corretto'
+          cache: maven
 
       - name: Workaround - Remove incompatible JVM args for Java 8
-        # Run this step *only* for the Java 8 job in the matrix
         if: matrix.java-version == '8'
-        working-directory: project/library # Ensure we modify the library's config
+        working-directory: project/library
         run: |
           echo "Applying Java 8 workaround for .mvn/jvm.config..."
-          # Check if the file exists before trying to modify it
           if [ -f .mvn/jvm.config ]; then
-            # Use sed to delete lines starting with --add-exports= in place
-            # The -i option *without* a suffix modifies the file directly (GNU sed)
             sed -i '/^--add-exports=/d' .mvn/jvm.config
             echo "Temporarily modified .mvn/jvm.config for Java 8 build (removed --add-exports lines, no backup):"
             cat .mvn/jvm.config
           else
             echo ".mvn/jvm.config not found in project/library, skipping modification."
           fi
+        shell: bash
 
       - name: Build Library
         working-directory: project/library
-        run: mvn clean install -DskipErrorProne=true --batch-mode
+        run: mvn clean install -DskipErrorProne=true --batch-mode -DskipTests
 
       - name: Check Installability
         working-directory: project/sanity
-        run: mvn clean test -DskipErrorProne=true
+        run: mvn clean test -DskipErrorProne=true --batch-mode
