--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -1,13 +1,15 @@
 name: Linting
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-
-permissions:
-  contents: write
+  workflow_call:
+    inputs:
+      ref:
+        required: true
+        type: string
+      commit_changes:
+        required: false
+        type: boolean
+        default: false
 
 defaults:
   run:
@@ -22,7 +24,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.ref }}
+          ref: ${{ inputs.ref }}
           fetch-depth: 0
 
       - name: Setup Java
@@ -33,12 +35,13 @@ jobs:
           cache: maven
 
       - name: Install Dependencies
-        run: mvn install --batch-mode
+        run: mvn install --batch-mode -DskipTests
 
       - name: Run Formatter
-        run: mvn spotless:apply
+        run: mvn spotless:apply --batch-mode
 
       - name: Commit Changes
+        if: ${{ inputs.commit_changes == true }}
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: 'style: Apply automated code formatting [skip ci]'
