--- a/.releaserc.json
+++ b/.releaserc.json
@@ -8,7 +8,7 @@
     [
       "@semantic-release/exec",
       {
-        "prepareCmd": "mvn install"
+        "prepareCmd": "mvn install --batch-mode -DskipTests"
       }
     ],
     [
@@ -21,8 +21,21 @@
       }
     ],
     [
+      "@codedependant/semantic-release-docker",
+      {
+        "dockerRegistry": "ghcr.io",
+        "dockerProject": "zitadel",
+        "dockerImage": "client-java",
+        "dockerTags": [
+          "{{version}}"
+        ]
+      }
+    ],
+    [
       "@semantic-release/github",
       {
+        "successComment": false,
+        "failComment": false,
         "assets": [
           {
             "path": "target/*.jar"
@@ -30,7 +43,6 @@
         ]
       }
     ],
-    "semantic-release-maven",
     [
       "@semantic-release/git",
       {
