Remove deprecated test spec and improve build configuration
Eliminated `SDKTestUsingWebTokenAssertionAuthenticationSpec` as it is no longer needed. Updated `pom.xml` to properly include spec sources for integration tests and added execution phases for `maven-failsafe-plugin`. Addressed minor adjustments in existing specs for improved test robustness.

--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,18 @@
               </sources>
             </configuration>
           </execution>
+          <execution>
+            <id>add_spec_sources</id>
+            <phase>generate-test-sources</phase>
+            <goals>
+              <goal>add-test-source</goal>
+            </goals>
+            <configuration>
+              <sources>
+                <source>src/spec/java</source>
+              </sources>
+            </configuration>
+          </execution>
         </executions>
       </plugin>
       <plugin>
@@ -243,12 +255,18 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>3.5.3</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
         <configuration>
-          <!-- Specify the spec directory for integration tests -->
           <testSourceDirectory>src/spec/java</testSourceDirectory>
           <includes>
-            <include>**/*Spec.java</include>  <!-- or whatever pattern you use for integration tests -->
-          </includes>
+            <include>**/*Spec.java</include>  </includes>
         </configuration>
       </plugin>
       <plugin>
