--- a/.releaserc.json
+++ b/.releaserc.json
@@ -8,7 +8,7 @@
     [
       "@semantic-release/exec",
       {
-        "prepareCmd": "sed -i 's/[0-9]\\+\\.[0-9]\\+\\.[0-9]\\+/'\"$NEXT_RELEASE_VERSION\"'/' src/main/java/com/zitadel/Version.java"
+        "prepareCmd": "sed -i 's/[0-9]\\+\\.[0-9]\\+\\.[0-9]\\+/${nextRelease.version}/' src/main/java/com/zitadel/Version.java"
       }
     ],
     [
