--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -51,7 +51,14 @@ jobs:
     uses: ./.github/workflows/qodana.yml
     with:
       ref: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.ref }}
-      test_artifact_name: test-results
+    secrets: inherit
+
+  build-docker:
+    name: Build Docker Container
+    needs: run-tests
+    uses: ./.github/workflows/docker.yml
+    with:
+      ref: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.ref }}
     secrets: inherit
 
   all-passed:
@@ -63,6 +70,7 @@ jobs:
       - compat-check
       - run-tests
       - code-inspection
+      - build-docker
     steps:
       - name: Report Success
         run: echo "All required checks passed successfully."
